[package]
name = "day-plans"
version = "0.1.0"
authors = ["Lucas Forster <lucas.forster@lehmenkaut.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
petgraph = "0.5.1"
proj = "0.22.0"
strum = "0.20.0"
strum_macros = "0.20.1"
