[package]
name = "day-plans"
version = "0.1.0"
authors = ["Lucas Forster <lucas.forster@lehmenkaut.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
lazy_static = "1.4.0"
petgraph = "0.5.1"
phf = { version = "0.8.0", features = ["macros"] }
proj = "0.22.0"
rayon = "1.5.1"
